--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <p>
+    <em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
@@ -31,29 +34,44 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(inventor => inventor.year > 1500 && inventor.year < 1600)
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const names = inventors.map(inventor => inventor.first + ' ' + inventor.last)
+    console.log("names ", names);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1)
+    console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const totalYears = inventors.reduce((total, inventor) => total + inventor.passed - inventor.year, 0)
+    console.log("totalYears ", totalYears);
     // 5. Sort the inventors by years lived
+
+    const oldest = inventors.sort((a, b) => (a.passed - a.year) > (b.passed - b.year) ? -1 : 1)
+    console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // const de = Array.from(document.querySelectorAll('.mw-category-group a')).map(b => b.textContent).filter(boulevard => boulevard.includes("de"))
+    // console.log("de ", de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alphabetically = people.sort((a, b) => a.split(', ')[0] > b.split(', ')[0] ? 1 : -1)
+    console.log("alphabetically ", alphabetically);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+    const sum = data.reduce((a, b) => { a[b] = (a[b] || 0) + 1; return a }, {})
+    console.log("sum ", sum);
 
   </script>
 </body>
+
 </html>
