--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -56,8 +56,8 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-    // const de = Array.from(document.querySelectorAll('.mw-category-group a')).map(b => b.textContent).filter(boulevard => boulevard.includes("de"))
-    // console.log("de ", de);
+    const de = Array.from(document.querySelectorAll('.mw-category-group a')).map(b => b.textContent).filter(boulevard => boulevard.includes("de"))
+    console.log("de ", de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
