--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -5,15 +5,56 @@
   <title>HTML5 Canvas</title>
 </head>
 <body>
-<canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
+  <canvas id="draw" width="800" height="800"></canvas>
+  <script>
+    const canvas = document.querySelector('#draw');
+    const context = canvas.getContext('2d');
 
-<style>
-  html, body {
-    margin:0;
-  }
-</style>
+    context.lineJoin = 'round';
+    context.lineCap = 'round';
+    context.lineWidth = 1;
+    context.globalCompositeOperation = 'xor';
+
+    let isDrawing = false;
+    let lastX = 0;
+    let lastY = 0;
+
+    let hue = 0;
+    let direction = true;
+
+    function draw(e) {
+      if (isDrawing) {
+        console.log("e ", e);
+        context.beginPath();
+        context.strokeStyle = `hsl(${hue},100%,50%)`;
+        context.moveTo(lastX, lastY);
+        context.lineTo(e.offsetX, e.offsetY);
+        context.stroke();
+        lastX = e.offsetX;
+        lastY = e.offsetY;
+        hue = hue > 358 ? 0 : hue + 1;
+
+        if (context.lineWidth > 99 || context.lineWidth < 2)
+          direction = !direction;
+        context.lineWidth = (direction) ? context.lineWidth + 1 : context.lineWidth - 1;
+      }
+    }
+    canvas.addEventListener('mousemove', draw)
+    canvas.addEventListener('mousedown', (e) => {
+      isDrawing = true;
+      lastX = e.offsetX;
+      lastY = e.offsetY;
+    })
+    canvas.addEventListener('mouseup', () => isDrawing = false)
+    canvas.addEventListener('mouseout', () => isDrawing = false)
+  </script>
+
+  <style>
+    html,
+    body {
+      margin: 0;
+    }
+  </style>
 
 </body>
 </html>
